# sfms

./: .gitignore  GEMINI.md  TASK_PROGRESS.md  domain.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_setting.md  readme.md  sfms.code-workspace  vscode_ext_install.sh
.devcontainer/: devcontainer.json
backend/: .env  .python-version  Containerfile  Dockerfile  create_test_user.py  env_check.py  init-script.txt  pyproject.toml  requirements.txt  ruff.toml  test_api_auth.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api_router.py
backend/app/core/: __init__.py  cache.py  codes.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  health.py  logger.py  responses.py  schemas.py  security.py  storage.py
backend/app/domain/cmm/: router.py  schemas.py  service.py
backend/app/domains/: __init__.py
backend/app/domains/cmm/: __init__.py  models.py  router.py  schemas.py  service.py  services.py
backend/app/domains/fac/: __init__.py  models.py  router.py  schemas.py  services.py
backend/app/domains/iam/: __init__.py  models.py  router.py  schemas.py  services.py
backend/app/domains/sys/: __init__.py  models.py  router.py  schemas.py  services.py
backend/app/domains/usr/: __init__.py  models.py  router.py  schemas.py  services.py
backend/app/scripts/: purge_attachments.py
backend/scripts/: entrypoint-wrapper.sh
backend/tests/: conftest.py  test_auth.py  test_cmm.py  test_fac.py  test_health.py  test_iam.py  test_integration.py  test_sys.py  test_usr.py
database/: backup_db.sh  deploy.pgsql  gumc.sql  mes.sql  readme.md  wims.cmm.pgsql  wims.iam.pgsql  wins.fac.pgsql
database/01_cmm/: table.pgsql
database/01_usr/: schema.pgsql
database/02_iam/: 02_iam_schema.pgsql  schema.pgsql
database/03_cmm/: 03_cmm_schema.pgsql  schema.pgsql
database/backups/: sfms_full_backup_20260314_001543.sql
database/sql/: 000_infrastructure.sql  00_deploy.pgsql  011_bootstrap.pgsql  01_usr_schema.pgsql  02_sys_schema.pgsql  03_cmm_schema.pgsql  04_fac_schema.pgsql  04_iam_schema.pgsql  05_fac_schema.pgsql  100_cmm_tables.pgsql  110_usr_tables.pgsql  110_usr_tables.sql  120_sys_tables.pgsql  120_sys_tables.sql  130_iam_tables.pgsql  130_iam_tables.sql  150_fac_tables.pgsql  150_fac_tables.sql  190_phase1_constraints.pgsql  410_usr_dummy_data.sql  90_constraints.pgsql  910_cmm_seed_data.pgsql  930_iam_seed_data.pgsql  93_cmm_seed.pgsql  94_usr_dummy.pgsql  999_full_deploy.pgsql  999_full_deploy.sql
docs/: ENV_GUIDE.md  OPERATIONS_GUIDE.md  SFMS 통합 EDR 설계 방향(마이그레이션을 고려).md  dynamic_menu_filtering.md  gemini-prompt.md  project_setting.md  readme.md
docs/SFMS Phase 1/: SFMS Phase 1 API - 01 공통 규격 (Standard).md  SFMS Phase 1 API - 04 시설 및 공간 관리(FAC).md  SFMS Phase 1 API - 05 공통모듈(CMM).md  SFMS Phase 1 API 설계서.md  SFMS Phase 1 APP 설계서 (Foundation & Security).md  SFMS Phase 1 SD - 01 공통 규격 및 CMM 모듈.md  SFMS Phase 1 SD - 02 IAM 및 USR 모듈.md  SFMS Phase 1 SD - 03 FAC 모듈.md  SFMS Phase 1 doc01 - 백앤드 아키텍처 및 DB.md  SFMS Phase 1 doc02 - DB - 01 설계 원칙 및 규칙(Coventions).md  SFMS Phase 1 doc02 - 프론트엔드 아키텍처 및 UI 표준.md  SFMS Phase 1 doc03 - DB - 01 설계 원칙 및 규칙(Coventions).md  SFMS Phase 1 doc03 - DB - 02 공통(CMM).md  SFMS Phase 1 doc03 - DB - 02 시스템(SYS).md  SFMS Phase 1 doc03 - DB - 03 공통(CMM).md  SFMS Phase 1 doc03 - DB - 03 인증 및 권리(IAM).md  SFMS Phase 1 doc03 - DB - 04 사용자 및 조직(USR).md  SFMS Phase 1 doc03 - DB - 04 인증 및 권리(IAM).md  SFMS Phase 1 doc03 - DB - 05 사용자 및 조직(USR).md  SFMS Phase 1 doc03 - DB - 05 시설 및 공간 관리(FAC).md  SFMS Phase 1 doc03 - DB - 06 도메인간 연결.md  SFMS Phase 1 doc03 - DB - 06 시설 및 공간 관리(FAC).md  SFMS Phase 1 doc03 - DB - 07 도메인간 연결.md  SFMS Phase 1 doc04 - API - 01 코어 및 인프라(CORE).md  SFMS Phase 1 doc04 - API - 02 시스템 관리 (SYS).md  SFMS Phase 1 doc04 - API - 02 인증 및 권한 관리 (IAM).md  SFMS Phase 1 doc04 - API - 03 사용자 및 조직(USR).md  SFMS Phase 1 doc04 - API - 03 인증 및 권한 관리 (IAM).md  SFMS Phase 1 doc04 - API - 04 사용자 및 조직(USR).md  SFMS Phase 1 doc04 - API - 05 공통(CMM).md  SFMS Phase 1 doc04 - API - 06 시설 및 공간 관리(FAC).md  SFMS Phase 1 doc05 - SD - 01 공통 표준 & CMM.md  SFMS Phase 1 doc05 - SD - 02 IAM &  USR.md  SFMS Phase 1 doc05 - SD - 03 FAC.md  SFMS Phase 1 doc06 - 기능명세서.md  SFMS Phase 1 doc07 - 프론트엔드 화면 및 컴포넌트 명세서.md  SFMS Phase 1 기능명세서 - .md  SFMS Phase 1 데이터베이스 설계서 (ERD & Schema).md
docs/os/: RockyLinux-1.os.md  RockyLinux-2.mise.md  RockyLinux-4.vscode.md  RockyLinux-5.python-Ruff.md  RockyLinux-6.node-Biome.md  RockyLinux-7.docker.md  RockyLinux-7.podman.md  RockyLinux-9.cert.md  RockyLinux-docker.md  RockyLinux-mise.md  RockyLinux-node-Biome.md  RockyLinux-python-uv.md  RockyLinux-vscode.md  RockyLinux.md  RokcyLinux-8.Project setting.md
frontend/: Containerfile  Dockerfile  biome.json  init-script.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/: .env  compose-dev.yml  compose.dev.tls.yaml  compose.dev.yaml  compose.dev.yml  compose.prod.yml  compose.yaml  compose.yml  directory.md  docker-clean.sh  podman-clean.sh  readme_docker.md  setup-infra.sh  setup-perms-dev.sh
infra/compose/: 00_core.yaml  (+17 more)
(+110 files in other folders)
